// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JHipster app generator with default config should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "BUILD_DIR": "target/",
  "CLIENT_DIST_DIR": "target/classes/static/",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DIST_DIR": "target/classes/static/",
  "DOCKER_DIR": "src/main/docker/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "6.1.4.Final",
  "JACKSON_DATABIND_NULLABLE_VERSION": "0.2.3",
  "JACOCO_VERSION": "0.8.8",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "17",
  "JHIPSTER_DEPENDENCIES_VERSION": "8.0.0-SNAPSHOT",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "MAIN_SRC_DIR": "src/main/webapp/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "3.0.0-RC1",
  "TEST_DIR": "src/test/",
  "TEST_SRC_DIR": "src/test/javascript/",
  "VUE": "vue",
  "applicationType": "monolith",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": true,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "buildDir": "target/",
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "builtInAuthority": true,
  "builtInUser": true,
  "cacheManagerIsAvailable": true,
  "cacheProvider": "ehcache",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": true,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "customizeDestination": [Function],
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devServerPort": 4200,
  "dockerContainers": Object {
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "gradleEnterpriseHost": "",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": false,
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDependencies": Object {
    "concurrently": "CONCURRENTLY_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "otherModules": Array [],
  "packageFolder": "com/mycompany/myapp",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "protractorTests": false,
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": false,
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "serverPort": 8080,
  "serviceDiscoveryAny": false,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryType": false,
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "testsNeedCsrf": false,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "userPrimaryKeyTypeString": false,
  "userPrimaryKeyTypeUUID": false,
  "webappEnumerationsDir": "src/main/webapp/app/entities/enumerations/",
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": false,
  "withAdminUi": true,
}
`;

exports[`JHipster app generator with gateway should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "BUILD_DIR": "target/",
  "CLIENT_DIST_DIR": "target/classes/static/",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DIST_DIR": "target/classes/static/",
  "DOCKER_DIR": "src/main/docker/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "6.1.4.Final",
  "JACKSON_DATABIND_NULLABLE_VERSION": "0.2.3",
  "JACOCO_VERSION": "0.8.8",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "17",
  "JHIPSTER_DEPENDENCIES_VERSION": "8.0.0-SNAPSHOT",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "MAIN_SRC_DIR": "src/main/webapp/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "3.0.0-RC1",
  "TEST_DIR": "src/test/",
  "TEST_SRC_DIR": "src/test/javascript/",
  "VUE": "vue",
  "applicationType": "gateway",
  "applicationTypeGateway": true,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "buildDir": "target/",
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "builtInAuthority": true,
  "builtInUser": true,
  "cacheManagerIsAvailable": false,
  "cacheProvider": "no",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": false,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": true,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "customizeDestination": [Function],
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devServerPort": 4200,
  "dockerContainers": Object {
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": false,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": undefined,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "gradleEnterpriseHost": undefined,
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
    "fr",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": false,
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDependencies": Object {
    "concurrently": "CONCURRENTLY_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "otherModules": Array [],
  "packageFolder": "com/mycompany/myapp",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "protractorTests": false,
  "reactive": true,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": false,
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "serverPort": "8080",
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": true,
  "serviceDiscoveryType": "eureka",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "testsNeedCsrf": false,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "userPrimaryKeyTypeString": false,
  "userPrimaryKeyTypeUUID": false,
  "webappEnumerationsDir": "src/main/webapp/app/entities/enumerations/",
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": false,
  "withAdminUi": true,
}
`;

exports[`JHipster app generator with microservice should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "BUILD_DIR": "target/",
  "CLIENT_DIST_DIR": "target/classes/static/",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DIST_DIR": "target/classes/static/",
  "DOCKER_DIR": "src/main/docker/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "6.1.4.Final",
  "JACKSON_DATABIND_NULLABLE_VERSION": "0.2.3",
  "JACOCO_VERSION": "0.8.8",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "17",
  "JHIPSTER_DEPENDENCIES_VERSION": "8.0.0-SNAPSHOT",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "MAIN_SRC_DIR": "src/main/webapp/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "3.0.0-RC1",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "applicationType": "microservice",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": true,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "buildDir": "target/",
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "builtInAuthority": false,
  "builtInUser": false,
  "cacheManagerIsAvailable": true,
  "cacheProvider": "hazelcast",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": false,
  "cacheProviderHazelcast": true,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "no",
  "clientFrameworkAngular": false,
  "clientFrameworkAny": false,
  "clientFrameworkNo": true,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": undefined,
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": false,
  "clientThemePrimary": false,
  "clientThemeVariant": undefined,
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "customizeDestination": [Function],
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devServerPort": undefined,
  "dockerContainers": Object {
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": undefined,
  "enableTranslation": true,
  "endpointPrefix": "services/jhipster",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": 8080,
  "gatlingTests": false,
  "gradleEnterpriseHost": undefined,
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
    "fr",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": false,
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDependencies": Object {
    "concurrently": "CONCURRENTLY_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "otherModules": Array [],
  "packageFolder": "com/mycompany/myapp",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "protractorTests": false,
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": false,
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "serverPort": "8081",
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": true,
  "serviceDiscoveryType": "eureka",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": true,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": true,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "testsNeedCsrf": false,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "websocket": false,
  "withAdminUi": false,
}
`;
